RESOLVED FIXED195660
Fix testbmalloc build
https://bugs.webkit.org/show_bug.cgi?id=195660
Summary Fix testbmalloc build
Sam Weinig
Reported 2019-03-12 20:25:39 PDT
Fix testbmalloc build
Attachments
Patch (8.05 KB, patch)
2019-03-12 20:33 PDT, Sam Weinig
no flags
Sam Weinig
Comment 1 2019-03-12 20:33:14 PDT
EWS Watchlist
Comment 2 2019-03-12 20:34:41 PDT
Attachment 364504 [details] did not pass style-queue: ERROR: Source/bmalloc/bmalloc/StdLibExtras.h:26: Use #pragma once instead of #ifndef for header guard. [build/header_guard] [5] ERROR: Source/bmalloc/bmalloc/StdLibExtras.h:36: bitwise_cast is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Total errors found: 2 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 3 2019-03-13 10:43:26 PDT
Comment on attachment 364504 [details] Patch r=me
WebKit Commit Bot
Comment 4 2019-03-13 11:09:06 PDT
Comment on attachment 364504 [details] Patch Clearing flags on attachment: 364504 Committed r242892: <https://trac.webkit.org/changeset/242892>
WebKit Commit Bot
Comment 5 2019-03-13 11:09:08 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2019-03-13 11:10:20 PDT
Note You need to log in before you can comment on or make changes to this bug.